<resources>
    <string name="app_name">LED\nMatrix</string>
    <string name="start_button">Start</string>
    <string name="send_text">Send Text</string>
    <string name="send_custom">Send Custom</string>
    <string name="view_saved">View Saved</string>
    <string name="connect_bluetooth">Connect Bluetooth</string>
    <string name="get_current">Get Current</string>
    <string name="first_line">Line 1:</string>
    <string name="second_line">Line 2:</string>
    <string name="preview">Preview Text</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="blank_line">Line:</string>
    <string name="name_label">Name:</string>
    <string name="sort_label">Sort Order:</string>
    <string name="error_saving">Error saving layout</string>
    <string name="default_sort">0</string>
    <string name="saved_layouts">Saved Layouts</string>
    <string name="no_layouts">You don\'t have any saved layouts. Create one below.</string>
    <string name="create_text">Create Text Layout</string>
    <string name="create_custom">Create Custom Layout</string>
    <string name="error_loading">Error loading files</string>
    <string name="layout_saved">%1$s layout saved</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="layout_deleted">%1$s layout deleted</string>
    <string name="error_deleting">Error deleting layout</string>
    <string name="logo">Logo</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported on this device</string>
    <string name="no_bluetooth_devices">No Bluetooth devices were found.</string>
    <string name="save_selected_device_key">SelectedBluetoothDevice</string>
    <string name="shared_preferences_file_key">com.kristenmabry.ledmatrix.bluetooth</string>
</resources>