<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChoicesActivity">

    <ImageView
        android:id="@+id/logo_top"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="75dp"
        android:src="@drawable/top_logo" />

    <Button
        android:id="@+id/send_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_text"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/colorAccent"
        android:onClick="sendText"
        />

    <Button
        android:id="@+id/send_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_gravity="center"
        android:text="@string/send_custom"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/view_saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_gravity="center"
        android:text="@string/view_saved"
        android:background="@color/colorAccent"
        android:onClick="viewSaved"
        />

    <Button
        android:id="@+id/get_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_gravity="center"
        android:text="@string/get_current"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_gravity="center"
        android:text="@string/connect_bluetooth"
        android:background="@color/colorAccent"/>
</LinearLayout>