<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SendTextActivity"
    android:orientation="vertical">

    <fragment
        android:name="com.kristenmabry.ledmatrix.LineEditorFragment"
        android:id="@+id/line1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:title="@string/first_line"
        />

    <fragment
        android:name="com.kristenmabry.ledmatrix.LineEditorFragment"
        android:id="@+id/line2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/line1"
        app:title="@string/second_line"
        />

    <Button
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_margin"
        android:text="@string/preview"
        android:layout_below="@id/line2"
        android:background="@drawable/button_ripple_effect"
        android:onClick="previewText"
        />

    <TextView
        android:id="@+id/line1_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/preview"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:padding="@dimen/default_margin"
        android:textSize="@dimen/preview_font_size"
        android:gravity="center"
        android:fontFamily="@font/codystar"
        />
    <TextView
        android:id="@+id/line2_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1_output"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:padding="@dimen/default_margin"
        android:textSize="@dimen/preview_font_size"
        android:gravity="center"
        android:fontFamily="@font/codystar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:id="@+id/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/cancel"
            android:background="@drawable/button_ripple_effect"
            android:onClick="cancel"
            />
        <Button
            android:id="@+id/save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/save"
            android:background="@drawable/button_ripple_effect"
            android:onClick="saveLayout"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/send_text"
            android:background="@drawable/button_ripple_effect"
            />
    </LinearLayout>

</RelativeLayout>